--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,14 +33,12 @@ dist.jar=${dist.dir}/OperationsOfEyeHospital.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.Downloads-iText7-Core-7.1.3=C:\\Users\\Asus\\Downloads\\iText7-Core-7.1.3
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}:\
-    ${file.reference.Downloads-iText7-Core-7.1.3}
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
