--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,6 +5,7 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
+file.reference.kernel-7.0.8.jar=C:\\Users\\Asus\\OneDrive\\Documents\\NetBeansProjects\\EyeHospital-OOP\\iText7-Core-7.1.15
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
