--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,11 +5,10 @@ do.jar=true
 do.jlink=false
 # No need to modify this property unless customizing JavaFX Ant task infrastructure
 endorsed.javafx.ant.classpath=.
-file.reference.kernel-7.0.8.jar=C:\\Users\\Asus\\OneDrive\\Documents\\NetBeansProjects\\EyeHospital-OOP\\iText7-Core-7.1.15
 javac.debug=true
 javadoc.preview=true
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\iexplore.exe
 
 jlink.strip=false
-user.properties.file=C:\\Users\\Asus\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\Tonmoy\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
