--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,6 +36,7 @@ excludes=
 file.reference.barcodes-7.1.15-javadoc.jar=iText7-Core-7.1.15/barcodes-7.1.15-javadoc.jar
 file.reference.barcodes-7.1.15-sources.jar=iText7-Core-7.1.15/barcodes-7.1.15-sources.jar
 file.reference.barcodes-7.1.15.jar=iText7-Core-7.1.15/barcodes-7.1.15.jar
+file.reference.EyeHospital-OOP-iText7-Core-7.1.15=iText7-Core-7.1.15
 file.reference.font-asian-7.1.15.jar=iText7-Core-7.1.15/font-asian-7.1.15.jar
 file.reference.forms-7.1.15-javadoc.jar=iText7-Core-7.1.15/forms-7.1.15-javadoc.jar
 file.reference.forms-7.1.15-sources.jar=iText7-Core-7.1.15/forms-7.1.15-sources.jar
@@ -48,7 +49,6 @@ file.reference.io-7.1.15-javadoc.jar=iText7-Core-7.1.15/io-7.1.15-javadoc.jar
 file.reference.io-7.1.15-sources.jar=iText7-Core-7.1.15/io-7.1.15-sources.jar
 file.reference.io-7.1.15.jar=iText7-Core-7.1.15/io-7.1.15.jar
 file.reference.kernel-7.0.0.jar=iText7-Core-7.1.15/kernel-7.0.0.jar
-file.reference.kernel-7.0.8.jar=C:\\Users\\Asus\\OneDrive\\Desktop\\iText7-Core-7.1.15\\kernel-7.0.8.jar
 file.reference.kernel-7.0.8.jar-1=iText7-Core-7.1.15/kernel-7.0.8.jar
 file.reference.kernel-7.0.8__1_.jar=iText7-Core-7.1.15/kernel-7.0.8 (1).jar
 file.reference.kernel-7.1.15-javadoc.jar=iText7-Core-7.1.15/kernel-7.1.15-javadoc.jar
@@ -82,8 +82,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.kernel-7.0.8.jar}:\
     ${file.reference.barcodes-7.1.15-javadoc.jar}:\
+    ${file.reference.EyeHospital-OOP-iText7-Core-7.1.15}:\
     ${file.reference.barcodes-7.1.15-sources.jar}:\
     ${file.reference.barcodes-7.1.15.jar}:\
     ${file.reference.font-asian-7.1.15.jar}:\
