--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,8 +47,8 @@ file.reference.io-7.0.8.jar=iText7-Core-7.1.15/io-7.0.8.jar
 file.reference.io-7.1.15-javadoc.jar=iText7-Core-7.1.15/io-7.1.15-javadoc.jar
 file.reference.io-7.1.15-sources.jar=iText7-Core-7.1.15/io-7.1.15-sources.jar
 file.reference.io-7.1.15.jar=iText7-Core-7.1.15/io-7.1.15.jar
+file.reference.iText7-Core-7.1.15-CopyLibs=iText7-Core-7.1.15/CopyLibs
 file.reference.kernel-7.0.0.jar=iText7-Core-7.1.15/kernel-7.0.0.jar
-file.reference.kernel-7.0.8.jar=C:\\Users\\Asus\\OneDrive\\Desktop\\iText7-Core-7.1.15\\kernel-7.0.8.jar
 file.reference.kernel-7.0.8.jar-1=iText7-Core-7.1.15/kernel-7.0.8.jar
 file.reference.kernel-7.0.8__1_.jar=iText7-Core-7.1.15/kernel-7.0.8 (1).jar
 file.reference.kernel-7.1.15-javadoc.jar=iText7-Core-7.1.15/kernel-7.1.15-javadoc.jar
@@ -82,7 +82,7 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.kernel-7.0.8.jar}:\
+    ${file.reference.iText7-Core-7.1.15-CopyLibs}:\
     ${file.reference.barcodes-7.1.15-javadoc.jar}:\
     ${file.reference.barcodes-7.1.15-sources.jar}:\
     ${file.reference.barcodes-7.1.15.jar}:\
